--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,12 @@
   font-size: large;
 }
 
+.td{
+height: 15rem;
+width: 15rem;
+background-color: lightcoral;
+
+}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
