--- a/src/index.css
+++ b/src/index.css
@@ -4,20 +4,29 @@ body {
   font-family: sans-serif;
 }
 #board{
-  width:315px;
-  height:315px;
+  width:40rem;
+  height:40rem;
 }
-div .cell {
-  width: 100px;
-  height: 100px;
-  background-color: #f2f2f2;
-  float: left;
-  border: 1px solid #808080;
-  font-size: 100px;
-  text-align: center;
-}
+.square {
+
+    background: #fff;
+    border: 1px solid #999;
+    float: left;
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 34px;
+    height: 34px;
+    margin-right: -1px;
+    margin-top: -1px;
+    padding: 0;
+    text-align: center;
+    width: 34px;
+  }
+
 
 .row {
+  border: 3px dotted darkviolet;
+  box-shadow: 32, 4, 56, 133;
   clear: both;
 }
 
