--- a/src/index.css
+++ b/src/index.css
@@ -15,19 +15,23 @@ body {
     font-size: 24px;
     font-weight: bold;
     line-height: 34px;
-    height: 34px;
+    height: 5rem;
     margin-right: -1px;
     margin-top: -1px;
     padding: 0;
     text-align: center;
-    width: 34px;
+    width: 5rem;
   }
 
 
 .row {
-  border: 3px dotted darkviolet;
-  box-shadow: 32, 4, 56, 133;
-  clear: both;
+  
+    border: 3px dotted darkviolet;
+    height: 5rem;
+    box-shadow: 25, 14, 48, 133;
+    clear: both;
+    display: flex;
+    justify-content: space-around;
 }
 
 #announce-winner {
